--- a/templates/baseadmin.html.twig
+++ b/templates/baseadmin.html.twig
@@ -10,11 +10,152 @@
         <link href="{{ asset('css/dataTables.bootstrap.min.css') }}" rel="stylesheet">
         <link href="{{ asset('css/AdminLTE.min.css') }}" rel="stylesheet">
         <link href="{{ asset('css/skin-blue.min.css') }}" rel="stylesheet">
-        <link href="{{ asset('css/main.css') }}" rel="stylesheet">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
         {% endblock %}
     </head>
-    {% block body %}{% endblock %}
+    <body class="hold-transition skin-blue sidebar-mini">
+        <div class="wrapper">
+
+          <!-- Main Header -->
+          <header class="main-header">
+            <!-- Logo -->
+              <!-- mini logo for sidebar mini 50x50 pixels -->
+              <span class="logo-mini"><b></b></span>
+              <!-- logo for regular state and mobile devices -->
+              <span class="logo-lg"><b></span>
+            </a>
+
+            <!-- Header Navbar -->
+            <nav class="navbar navbar-static-top" role="navigation">
+              <!-- Sidebar toggle button-->
+              <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
+                <span class="sr-only">Toggle navigation</span>
+              </a>
+              <!-- Navbar Right Menu -->
+              <div class="navbar-custom-menu">
+                <ul class="nav navbar-nav">
+
+                  <!-- User Account Menu -->
+                  <li class="dropdown user user-menu">
+                    <!-- Menu Toggle Button -->
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                      <!-- The user image in the navbar-->
+
+                      <!-- hidden-xs hides the username on small devices so only the image appears. -->
+                      <span class="hidden-xs">{{ app.user.username }}</span>
+                    </a>
+                    <ul class="dropdown-menu">
+                      <!-- The user image in the menu -->
+                      <li class="user-header">
+                      {{ app.user.username }}
+                        <p>
+
+                        </p>
+                      </li>
+                      <!-- Menu Body -->
+                      <li class="user-body">
+                        <div class="row">
+                          <div class="col-xs-4 text-center">
+                            <a href="#">Followers</a>
+                          </div>
+                          <div class="col-xs-4 text-center">
+                            <a href="#">Sales</a>
+                          </div>
+                          <div class="col-xs-4 text-center">
+                            <a href="#">Friends</a>
+                          </div>
+                        </div>
+                        <!-- /.row -->
+                      </li>
+                      <!-- Menu Footer-->
+                      <li class="user-footer">
+                        <div class="pull-left">
+                          <a href="#" class="btn btn-default btn-flat">Profile</a>
+                        </div>
+                        <div class="pull-right">
+                          <a href="#" class="btn btn-default btn-flat">Sign out</a>
+                        </div>
+                      </li>
+                    </ul>
+                  </li>
+                  <!-- Control Sidebar Toggle Button -->
+                  <li>
+                    <a href="#" data-toggle="control-sidebar"><i class="fa fa-gears"></i></a>
+                  </li>
+                </ul>
+              </div>
+            </nav>
+          </header>
+          <!-- Left side column. contains the logo and sidebar -->
+          <aside class="main-sidebar">
+
+            <!-- sidebar: style can be found in sidebar.less -->
+            <section class="sidebar">
+
+              <!-- Sidebar user panel (optional)
+              <div class="user-panel">
+                <div class="pull-left image">
+
+                </div>
+                <div class="pull-left info">
+                  <p>Alexander Pierce</p>
+                   Status
+                  <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
+                </div>
+              </div>-->
+
+              <!-- search form (Optional) -->
+              <form action="#" method="get" class="sidebar-form">
+                <div class="input-group">
+                  <input type="text" name="q" class="form-control" placeholder="Search...">
+                  <span class="input-group-btn">
+                      <button type="submit" name="search" id="search-btn" class="btn btn-flat"><i class="fa fa-search"></i>
+                      </button>
+                    </span>
+                </div>
+              </form>
+              <!-- /.search form -->
+
+              <!-- Sidebar Menu -->
+              <ul class="sidebar-menu" data-widget="tree">
+                <li class="header"></li>
+                <!-- User -->
+                {% if is_granted('ROLE_ADMIN') %}
+                <li class="{{ app.request.get('_route') == 'user_registration' ? 'active' }}"><a href="#"><i class="fa fa-users"></i> <span>User</span></a></li>
+                {% endif %}
+                <li class="{{ app.request.get('_route') == 'anagrafica' ? 'active' }}"><a href="#"><i class="fa fa-address-book"></i> <span>Anagrafica</span></a></li>
+                <!-- Anagrafica -->
+                <!-- Pacchetto -->
+                <li class="treeview" >
+                  <a href="#"><i class="fa fa-pencil"></i> <span>Pacchetto</span>
+                    <span class="pull-right-container">
+                        <i class="fa fa-angle-left pull-right"></i>
+                      </span>
+                  </a>
+                  <ul class="treeview-menu">
+                    <li><a href="#">Crea pacchetto</a></li>
+                    <li><a href="#">Crea servizio</a></li>
+
+                  </ul>
+                </li>
+              </ul>
+              <!-- /.sidebar-menu -->
+            </section>
+            <!-- /.sidebar -->
+          </aside>
+
+          <!-- Content Wrapper. Contains page content -->
+          <div class="content-wrapper">
+            <!-- Content Header (Page header) -->
+
+            <!-- Main content -->
+            <section class="content container-fluid">
+              {% block body %}{% endblock %}
+            </section>
+            <!-- /.content -->
+          </div>
+        </div>
+        </body>
         {% block javascripts %}
         <!-- admin -->
         <script src="{{ asset('js/jquery.min.js') }}"></script>
