--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -1,25 +1,41 @@
-{% extends 'base.html.twig' %}
+{% block title %}{% endblock %}
+{% block stylesheets %}
+<link href="{{ asset('css/bootstrap.min.css') }}" rel="stylesheet">
+<link href="{{ asset('css/font-awesome.min.css') }}" rel="stylesheet">
+<link href="{{ asset('css/ionicons.min.css') }}" rel="stylesheet">
+<link href="{{ asset('css/AdminLTE.min.css') }}" rel="stylesheet">
+<link href="{{ asset('css/skin-blue.min.css') }}" rel="stylesheet">
+<link href="{{ asset('css/main.css') }}" rel="stylesheet">
+<link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
+{% endblock %}
 {% block body %}
-
-<div class="col-md-6">
-    <h1>Registrati</h1>
-{{ form_start(form) }}
-<div class="form-group">
-    {{ form_row(form.username, {'attr': {'class': 'form-control'}}) }}
-</div>
-<div class="form-group">
-    {{ form_row(form.email, {'attr': {'class': 'form-control'}}) }}
-</div>
-<div class="form-group">
-    {{ form_row(form.Password.first, {'attr': {'class': 'form-control'}}) }}
-</div>
-<div class="form-group">
-    {{ form_row(form.Password.second, {'attr': {'class': 'form-control'}}) }}
-</div>
-<div class="form-group">
-    {{ form_row(form.roles, {'attr': {'class': 'form-control'}}) }}
-</div>
-    <button type="submit" class="btn btn-info">Registrati</button>
-{{ form_end(form) }}
-</div>
+<body class="hold-transition login-page">
+  <div class="login-box">
+    <div class="login-logo">
+      <img src="{{ asset('images/logo.svg') }}"></img>
+    </div>
+    <!-- /.login-logo -->
+    <div class="login-box-body">
+      <p class="login-box-msg">Iscriviti</p>
+        {{ form_start(form) }}
+        <div class="form-group">
+          {{ form_row(form.username, {'attr': {'class': 'form-control'}}) }}
+        </div>
+        <div class="form-group">
+          {{ form_row(form.email, {'attr': {'class': 'form-control'}}) }}
+        </div>
+        <div class="form-group">
+          {{ form_row(form.Password.first, {'attr': {'class': 'form-control'}}) }}
+        </div>
+        <div class="form-group">
+          {{ form_row(form.Password.second, {'attr': {'class': 'form-control'}}) }}
+        </div>
+        <div class="form-group">
+          {{ form_row(form.roles, {'attr': {'class': 'form-control'}}) }}
+        </div>
+        <button type="submit" class="btn btn-info">Registrati</button>
+        {{ form_end(form) }}
+      </div>
+    </div>
+  </body>
 {% endblock %}
