--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -1,5 +1,5 @@
 {% extends 'baseadmin.html.twig' %}
-{% block title %}Hello!{% endblock %}
+{% block title %}Admin{% endblock %}
 {% block body %}
 <body>
 </body>
