finish article category

--- a/templates/baseadmin.html.twig
+++ b/templates/baseadmin.html.twig
@@ -135,7 +135,7 @@
                       </span>
                   </a>
                   <ul class="treeview-menu">
-                    <li><a href="#">Crea categoria</a></li>
+                    <li><a href="{{ path('addcategoria') }}">Crea categoria</a></li>
                     <li><a href="#">Crea articoli</a></li>
 
                   </ul>
