--- a/templates/baseadmin.html.twig
+++ b/templates/baseadmin.html.twig
@@ -136,7 +136,7 @@
                   </a>
                   <ul class="treeview-menu">
                     <li><a href="{{ path('addcategoria') }}">Crea categoria</a></li>
-                    <li><a href="#">Crea articoli</a></li>
+                    <li><a href="{{ path('addarticoli') }}">Crea articoli</a></li>
 
                   </ul>
                 </li>
