--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2153,3 +2153,6 @@ table.dataTable thead th.sorting_desc:after
 {
     content: '\f0dd';
 }
+span.select2.select2-container.select2-container--default {
+    width: 100%!important;
+}
