--- a/templates/admin/editarticoli.html.twig
+++ b/templates/admin/editarticoli.html.twig
@@ -25,8 +25,9 @@
 <div class="form-group">
     {{ form_row(form.categoria, {'attr': {'class': 'form-control'}}) }}
 </div>
-    <button type="submit" class="btn btn-info">Modifica</button>
+    <button type="submit" class="btn btn-warning">Modifica</button>
 {{ form_end(form) }}
+<a class="btn btn-info btn-xs" href="{{ path('addarticoli') }}">indietro</a>
 <script src="//cdn.ckeditor.com/4.9.2/standard/ckeditor.js"></script>
 <script>
   CKEDITOR.replace( 'articoli_articolo' );
