--- a/templates/admin/editarticoli.html.twig
+++ b/templates/admin/editarticoli.html.twig
@@ -17,6 +17,9 @@
     {{ form_row(form.data, {'attr': {'class': 'form-control'}}) }}
 </div>
 <div class="form-group">
+    {{ form_row(form.image, {'attr': {'class': 'form-control'}}) }}
+</div>
+<div class="form-group">
     {{ form_row(form.articolo, {'attr': {'class': 'form-control'}}) }}
 </div>
 <div class="form-group">
