--- a/templates/admin/addarticoli.html.twig
+++ b/templates/admin/addarticoli.html.twig
@@ -48,7 +48,7 @@
                   {{ form_row(form.data, {'attr': {'class': 'form-control'}}) }}
               </div>
               <div class="form-group">
-                  {{ form_row(form.image, {'attr': {'class': 'form-control'}}) }}
+                  {{ form_row(form.image) }}
               </div>
               <div class="form-group">
                   {{ form_row(form.articolo, {'attr': {'class': 'form-control'}}) }}
