--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -11,11 +11,11 @@
 {% block body %}
 <body class="hold-transition login-page">
   <div class="login-box">
-    <div class="login-logo">
-      <img src="{{ asset('images/logo.svg') }}"></img>
-    </div>
     <!-- /.login-logo -->
     <div class="login-box-body">
+      <div class="login-logo">
+        <img class="brand" src="{{ asset('images/Logo1.svg') }}"></img>
+      </div>
       <p class="login-box-msg">Iscriviti</p>
         {{ form_start(form) }}
         <div class="form-group">
