--- a/templates/admin/addcategoria.html.twig
+++ b/templates/admin/addcategoria.html.twig
@@ -36,10 +36,16 @@
             <div class="box-body">
               {{ form_start(form) }}
               <div class="form-group">
+                  {{ form_row(form.active, {'attr': {'class': 'form-control active'}}) }}
+              </div>
+              <div class="form-group">
                   {{ form_row(form.nome, {'attr': {'class': 'form-control'}}) }}
               </div>
               <div class="form-group">
                   {{ form_row(form.data, {'attr': {'class': 'form-control'}}) }}
+              </div>
+              <div class="form-group">
+                  {{ form_row(form.image) }}
               </div>
                   <button type="submit" class="btn btn-info">Aggiungi</button>
               {{ form_end(form) }}
