--- a/templates/admin/editcategoria.html.twig
+++ b/templates/admin/editcategoria.html.twig
@@ -4,10 +4,16 @@
 <h2 class="page-header">Modifica Categoria</h2>
 {{ form_start(form) }}
 <div class="form-group">
+    {{ form_row(form.active, {'attr': {'class': 'form-control active'}}) }}
+</div>
+<div class="form-group">
     {{ form_row(form.nome, {'attr': {'class': 'form-control'}}) }}
 </div>
 <div class="form-group">
     {{ form_row(form.data, {'attr': {'class': 'form-control'}}) }}
+</div>
+<div class="form-group">
+    {{ form_row(form.image) }}
 </div>
     <button type="submit" class="btn btn-warning">Modifica</button>
 {{ form_end(form) }}
