--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -30,7 +30,7 @@
         <div class="form-group">
           {{ form_row(form.Password.second, {'attr': {'class': 'form-control'}}) }}
         </div>
-        <div class="form-group">
+        <div class="form-group hidden">
           {{ form_row(form.roles, {'attr': {'class': 'form-control'}}) }}
         </div>
         <button type="submit" class="btn btn-info">Registrati</button>
