--- a/templates/site/index.html.twig
+++ b/templates/site/index.html.twig
@@ -30,7 +30,7 @@
 			<section class="category-area section-gap" id="news">
 				<div class="container">
 					<div class="row d-flex justify-content-center">
-						<div class="menu-content pb-70 col-lg-8">
+						<div class="menu-content pb-40 col-lg-8">
 							<div class="title text-center">
 								<h1 class="mb-10">Latest News from all categories</h1>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore  et dolore magna aliqua.</p>
@@ -38,21 +38,13 @@
 						</div>
 					</div>
 					<div class="active-cat-carusel">
+						{% for n in news %}
 						<div class="item single-cat">
-							<img src="img/c1.jpg" alt="">
-							<p class="date">10 Jan 2018</p>
-							<h4><a href="#">It S Hurricane Season Visiting Hilton</a></h4>
+							<img src="{{ asset('uploads/image/' ~ n.image) }}" alt="">
+							<p class="date">{{n.data|date("j F Y")}}</p>
+							<h4><a href="{{ path('categoriasite', { id: n.id }) }}">{{n.titolo}}</a></h4>
 						</div>
-						<div class="item single-cat">
-							<img src="img/c2.jpg" alt="">
-							<p class="date">10 Jan 2018</p>
-							<h4><a href="#">What Makes A Hotel Boutique</a></h4>
-						</div>
-						<div class="item single-cat">
-							<img src="img/c3.jpg" alt="">
-							<p class="date">10 Jan 2018</p>
-							<h4><a href="#">Les Houches The Hidden Gem Valley</a></h4>
-						</div>
+						{% endfor %}
 					</div>
 				</div>
 			</section>
