--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,23 +26,8 @@
 						    <ul class="navbar-nav">
 								<li><a href="#home">Home</a></li>
 								<li><a href="#news">News</a></li>
-								<li><a href="#travel">Travel</a></li>
-								<li><a href="#fashion">fashion</a></li>
-								<li><a href="#team">team</a></li>
+                <li><a href="#categorie">Categorie</a></li>
 								<!-- Dropdown -->
-							    <li class="dropdown">
-							      <a class="dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-							        Pages
-							      </a>
-							      <div class="dropdown-menu">
-							        <a class="dropdown-item" href="single.html">Single</a>
-							        <a class="dropdown-item" href="category.html">Category</a>
-							        <a class="dropdown-item" href="search.html">Search</a>
-							        <a class="dropdown-item" href="archive.html">Archive</a>
-							        <a class="dropdown-item" href="generic.html">Generic</a>
-							        <a class="dropdown-item" href="elements.html">Elements</a>
-							      </div>
-							    </li>
                   <li class="dropdown">
                     <a class="dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
                       <i class="fa fa-user"></i>
