--- a/templates/admin/editarticoli.html.twig
+++ b/templates/admin/editarticoli.html.twig
@@ -17,7 +17,12 @@
     {{ form_row(form.data, {'attr': {'class': 'form-control'}}) }}
 </div>
 <div class="form-group">
+  {% if articoli.image == true %}
+    {{ form_row(form.image, {'attr': {'class': 'hidden'}}) }}
+    <img class="preimage" src="{{ asset('uploads/image/' ~ articoli.image.filename) }}">
+  {% else %}
     {{ form_row(form.image) }}
+  {% endif %}
 </div>
 <div class="form-group">
     {{ form_row(form.articolo, {'attr': {'class': 'form-control'}}) }}
